@@ -3,6 +3,8 @@ devel
 
 * Fixed uptime in _admin/statistics.
 
+* Fixed a permissions bug for /_admin/cluster/rebalanceShards.
+
 * Fixed a bug in smart graph bfs traversals that might violate path uniqueness
   requirements in rare cases.
 
